force-app/main/default/objects/Contact/fields/Is_Portal_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Portal_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this contact has an active Experience Cloud user record. Set by portal provisioning flow. Controls portal access indicators on the contact record page. Req: MKT-REQ-EXP-001.</description>
    <label>Portal Active</label>
    <type>Checkbox</type>
</CustomField>