force-app/main/default/objects/Contact/fields/Portal_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Type__c</fullName>
    <description>Role of this contact within the Experience Cloud portal. Account Admin can manage other portal users; Standard User has self-service access only. Set during portal user provisioning. Req: MKT-REQ-EXP-003.</description>
    <label>Portal User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Admin</fullName>
            </value>
            <value>
                <fullName>Standard User</fullName>
                <default>true</default>
                <label>Standard User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>