force-app/main/default/objects/Contact/fields/Portal_Welcome_Sent__c.field-meta.xml
<CustomField>
    <fullName>Portal_Welcome_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the portal welcome email has been sent to this contact. Checked by the provisioning flow to prevent duplicate welcome emails on re-provisioning. Req: MKT-REQ-EXP-001.</description>
    <label>Welcome Email Sent</label>
    <type>Checkbox</type>
</CustomField>