force-app/main/default/objects/Contact/fields/Role_at_Catalyst__c.field-meta.xml
<CustomField>
    <fullName>Role_at_Catalyst__c</fullName>
    <description>The contact's role in the Catalyst buying or user group. Drives opportunity influence tracking and portal access decisions. Req: MKT-REQ-SALES-009.</description>
    <label>Role at Catalyst</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Technical Evaluator</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>